[tool.poetry]
name = "utopia"
version = "0.1.0"
description = ""
authors = ["nemosanima <nemosanima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
parse = "^1.20.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
